# OGX-Mini-2026

./: .gitignore
.github/workflows/: build.yml
Firmware/ESP32/main/Board/: board_api.cpp
Firmware/RP2040/: CMakeLists.txt
Firmware/RP2040/src/: lwipopts.h
Firmware/RP2040/src/Bluepad32/: Bluepad32.cpp
Firmware/RP2040/src/Board/board_api_private/: board_api_bt.cpp  board_api_private.h
Firmware/RP2040/src/UserSettings/: UserSettings.cpp
Firmware/RP2040/src/Wii/wiimote-lib/: CMakeLists.txt
Firmware/cmake/: patch_libs.cmake
scripts/: build.ps1
